logs/charmhelpers.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Tempita-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/charmhelpers'...
Listing './lib/python3.5/site-packages/charmhelpers/cli'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/amulet'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/ansible'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/benchmark'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/charmhelpers'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/charmsupport'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/database'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hahelpers'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/apache'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/apache/checks'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/audits'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/host'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/host/checks'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/mysql'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/mysql/checks'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/ssh'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/hardening/ssh/checks'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/mellanox'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/network'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/network/ovs'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/openstack'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/openstack/amulet'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/openstack/files'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/openstack/ha'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/openstack/templates'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/peerstorage'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/python'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/saltstack'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/ssl'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/storage'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/storage/linux'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/templating'...
Listing './lib/python3.5/site-packages/charmhelpers/contrib/unison'...
Listing './lib/python3.5/site-packages/charmhelpers/core'...
Listing './lib/python3.5/site-packages/charmhelpers/core/host_factory'...
Listing './lib/python3.5/site-packages/charmhelpers/core/kernel_factory'...
Listing './lib/python3.5/site-packages/charmhelpers/core/services'...
Listing './lib/python3.5/site-packages/charmhelpers/fetch'...
Listing './lib/python3.5/site-packages/charmhelpers/payload'...
Listing './lib/python3.5/site-packages/charmhelpers-0.18.3.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/netaddr'...
Listing './lib/python3.5/site-packages/netaddr/contrib'...
Listing './lib/python3.5/site-packages/netaddr/eui'...
Listing './lib/python3.5/site-packages/netaddr/ip'...
Listing './lib/python3.5/site-packages/netaddr/strategy'...
Listing './lib/python3.5/site-packages/netaddr-0.7.19.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tempita'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/cli'...
Listing './lib/python3.5/site-packages/tests/context'...
Listing './lib/python3.5/site-packages/tests/contrib'...
Listing './lib/python3.5/site-packages/tests/contrib/amulet'...
Listing './lib/python3.5/site-packages/tests/contrib/ansible'...
Listing './lib/python3.5/site-packages/tests/contrib/benchmark'...
Listing './lib/python3.5/site-packages/tests/contrib/charmhelpers'...
Listing './lib/python3.5/site-packages/tests/contrib/charmsupport'...
Listing './lib/python3.5/site-packages/tests/contrib/database'...
Listing './lib/python3.5/site-packages/tests/contrib/hahelpers'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/apache'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/apache/checks'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/audits'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/host'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/host/checks'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/mysql'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/mysql/checks'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/ssh'...
Listing './lib/python3.5/site-packages/tests/contrib/hardening/ssh/checks'...
Listing './lib/python3.5/site-packages/tests/contrib/network'...
Listing './lib/python3.5/site-packages/tests/contrib/openstack'...
Listing './lib/python3.5/site-packages/tests/contrib/openstack/ha'...
Listing './lib/python3.5/site-packages/tests/contrib/peerstorage'...
Listing './lib/python3.5/site-packages/tests/contrib/python'...
Listing './lib/python3.5/site-packages/tests/contrib/saltstack'...
Listing './lib/python3.5/site-packages/tests/contrib/ssl'...
Listing './lib/python3.5/site-packages/tests/contrib/storage'...
Listing './lib/python3.5/site-packages/tests/contrib/templating'...
Listing './lib/python3.5/site-packages/tests/contrib/unison'...
Listing './lib/python3.5/site-packages/tests/coordinator'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './lib/python3.5/site-packages/tests/fetch'...
Listing './lib/python3.5/site-packages/tests/payload'...
Listing './lib/python3.5/site-packages/tests/tools'...
Listing './lib/python3.5/site-packages/tools'...
Listing './lib/python3.5/site-packages/tools/charm_helpers_sync'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
